<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/etNameEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:nextFocusDown="@id/etSurnameEdit"
        android:inputType="textPersonName|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="155dp" />

    <EditText
        android:id="@+id/etSurnameEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/Surname"
        android:nextFocusDown="@id/etNumberEdit"
        android:inputType="textPersonName|textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameEdit" />

    <EditText
        android:id="@+id/etNumberEdit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/PhoneNumber"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurnameEdit" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnSaveEdit"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/SaveEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumberEdit" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/DeleteContact"
        app:layout_constraintEnd_toEndOf="@+id/btnSaveEdit"
        app:layout_constraintStart_toStartOf="@+id/btnCancel"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>